<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/detect"
            android:layout_width="380dp"
            android:layout_height="146dp"
            android:background="@color/soft"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="29dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="327dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/text1"
            android:textAlignment="textStart"
            android:textColor="@color/dark_pink"
            android:textSize="32sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/promote"
            android:layout_width="378dp"
            android:layout_height="19dp"
            android:layout_marginTop="12dp"
            android:text="@string/text2"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/detect"
            tools:ignore="MissingConstraints,TextSizeCheck" />

        <TextView
            android:id="@+id/promote2"
            android:layout_width="373dp"
            android:layout_height="14dp"
            android:layout_marginTop="16dp"
            android:text="@string/text3"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/promote"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="374dp"
            android:layout_height="15dp"
            android:layout_marginTop="32dp"
            android:text="@string/text4"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/promote2"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/detect_layout"
            android:layout_width="183dp"
            android:layout_height="48dp"
            android:text="@string/text5"
            app:icon="@drawable/ic_detect"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/guide"
            android:layout_width="378dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/text6"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/guide2"
            android:layout_width="377dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/text7"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/guide"
            tools:ignore="TextSizeCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="230dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="395dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvArticles"
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/guide2" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rvArticles"
            app:layout_constraintVertical_bias="0.607" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>