<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/result"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/analyze_description"
                    android:layout_width="380dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/text8"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/result_text"
                    tools:ignore="TextSizeCheck" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="395dp" />

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="157dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_download"
                    app:iconTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.666"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/analyze_description"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="157dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_arrow_back"
                    app:iconTint="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/saveBtn"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/analyze_description"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>